feat: add anonymous function expressions
- Add Expr.Lambda AST node with params and body
- Refactor LoxFunction to store name, params, body individually
- Add visitLambdaExpr in interpreter
- Parse lambdas in primary() and declaration()

Signed-off-by: Radu Andrei Tudorica <raduandreitudorica3@gmail.com>